# ars-pathfinder

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SPECIFICATION.md  init.sh  local.yml  pathfinder.proto  production.yml  pyproject.toml
.envs/.local/: .app
.envs/.production.example/: .app
.github/workflows/: ci.yml
compose/local/: Dockerfile  export-requirements.sh  install.sh
compose/monitoring/: Dockerfile  export-requirements.sh  install.sh
compose/production/: Dockerfile  export-requirements.sh  install.sh
requirements/: local.txt  monitoring.txt  production.txt
src/: app.py  main.py  models.py
src/core/: config.py  enums.py  exceptions.py
src/db/: connections.py
src/monitoring/: app.py
src/pathfinder/: a_star.py  abstract.py  finder.py  managers.py
src/server/: handlers.py
src/services/: field_state.py  validators.py
src/state/: state.py
src/tests/: conftest.py  test_a_star.py  test_example.py
src/tests/test_db/: test_connections.py
src/tests/test_pathfinder/: test_finder.py  test_managers.py
src/tests/test_services/: test_field_state.py  test_validators.py
src/tests/test_state/: test_state.py
